--- a/dataset/label/label_dblp.ipynb
+++ b/dataset/label/label_dblp.ipynb
@@ -1128,9 +1128,8 @@
     "        v_clu_ts[\"None\"] = v_tmp\n",
     "    else:    \n",
     "        v_clu_ts[v] = v_tmp\n",
-    "\n",
-    "# 92 -\n",
-    "v_clu_num = {\"CV\": 30, \"AI\": 29, \"None\": 14, \"NLP\": 11, \"CHI\": 4, \"DB\": 4}\n",
+    "a,b,c,d,e,f=10,10,10,10,10,10\n",
+    "v_clu_num = {\"CV\": a, \"AI\": b, \"None\": c, \"NLP\": d, \"CHI\": e, \"DB\": f}\n",
     "print(v_clu_num)\n",
     "v_clu_ts[\"CV\"][:5]\n",
     "v_clu_ts[\"None\"][:5]"
